# Cpu-load-info

./: Cargo.toml  README.md
src/: main.rs
