[package]
name = "tcp"
version = "0.1.0"
authors = ["Michal Tomaszewicz <235568@student.pwr.edu.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systemstat = "0.1.7"
json = "0.12.4"
chrono = "0.4.19"
serde_json = "1.0"
hyper = "0.14.4"
http = "0.2.3"
serde = { version = "1.0", features = ["derive"] }